EDLine labels - IE8 inline-block fix - Find and Create buttons are shown overlapped with label

--- a/Signum.Web/Signum/Content/SF_Lines.css
+++ b/Signum.Web/Signum/Content/SF_Lines.css
@@ -11,6 +11,7 @@
 .sf-label-detail-line, .sf-label-repeater-line
 {
     display: inline-block;
+    margin-right: 1px; /*IE8 fix for inline-block*/
 }
 
 .sf-unit-line {
